# Anonymous-telegram-bot

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
app/bot/: callbacks.py  edit_utils.py
app/bot/handlers/: __init__.py  block_handler.py  callback_handler.py  menu_handler.py  message_handler.py  reply_handler.py  start_handler.py
app/bot/keyboards/: block_confirm.py  main_menu.py  message_actions.py
app/bot/middlewares/: db_session_middleware.py  error_middleware.py  rate_limit_middleware.py  user_middleware.py
app/bot/texts/: fa.py
app/config/: bot_config.py  database_config.py  settings.py
app/database/: base.py  connection.py  registry.py  session.py
app/database/migrations/: env.py
app/modules/blocks/: models.py  repository.py  service.py
app/modules/conversations/: models.py  repository.py  service.py
app/modules/links/: service.py  token_service.py
app/modules/messages/: models.py  repository.py  schemas.py  service.py
app/modules/notifications/: service.py
app/modules/rate_limits/: service.py
app/modules/states/: models.py  repository.py  service.py
app/modules/users/: models.py  repository.py  service.py
app/utils/: id_generator.py  logger.py  text_sanitizer.py  token_generator.py
deploy/: anon-bot.service
tests/unit/: test_rate_limit.py  test_utils.py
